[project]
name = "gemini-api-custom"
description = "A custom node for ComfyUI to integrate Google Gemini API."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["google-genai>=1.5.0", "Pillow", "requests", "numpy", "torch"]

[project.urls]
Repository = "https://github.com/Andywugh/ComfyUI-Gemini-API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Andywugh"
DisplayName = "ComfyUI-Gemini-API"
Icon = ""
